--- a/i3/config
+++ b/i3/config
@@ -49,13 +49,14 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec --no-startup-id i3-sensible-terminal
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id dmenu_run
+#bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id  rofi -show drun -show-icons
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -185,6 +186,34 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        status_command i3status
-}
+#bar {
+#        status_command i3status
+#}
+
+
+# set gaps
+gaps top 0
+gaps bottom 0
+gaps left 0
+gaps right 0
+gaps inner 5
+
+# start fcitx5
+exec --no-startup-id fcitx5
+
+
+# set wallpaper
+#exec_always feh --bg-fill ~/pictures/1330757.png
+exec --no-startup-id feh --bg-fill ~/pictures/1330757.png
+
+
+# start polybar
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+#exec --no-startup-id $HOME/.config/polybar/launch.sh
+
+# set flameshot shortcut
+bindsym $mod+Shift+s exec --no-startup-id "flameshot gui"
+
+# set brightnessctl
+bindsym XF86MonBrightnessDown exec --no-startup-id "brightnessctl s 5%-"
+bindsym XF86MonBrightnessUp exec --no-startup-id "brightnessctl s 5%+"
