--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -25,6 +25,8 @@ secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
+include-directory=./modules
+
 [bar/example]
 width = 100%
 height = 24pt
@@ -51,7 +53,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard memory cpu wlan date systray
+modules-right = pulseaudio backlight xkeyboard memory cpu wlan date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
