--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -85,7 +85,7 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-# fade-delta = 10
+fade-delta = 6
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
@@ -107,7 +107,7 @@ fade-out-step = 0.03;
 inactive-opacity = 0.95;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
+# frame-opacity = 1.0 
 frame-opacity = 0.9;
 
 # Let inactive opacity set by -i override the '_NET_WM_WINDOW_OPACITY' values of windows.
@@ -118,7 +118,7 @@ inactive-opacity-override = false;
 # active-opacity = 1.0
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
-# inactive-dim = 0.0
+inactive-dim = 0.3
 
 # Specify a list of conditions of windows that should never be considered focused.
 # focus-exclude = []
@@ -134,7 +134,9 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # example:
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
-# opacity-rule = []
+opacity-rule = [
+  "77:class_g='Alacritty'"
+];
 
 
 #################################
@@ -144,18 +146,33 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 # Sets the radius of rounded window corners. When > 0, the compositor will
 # round the corners of windows. Does not interact well with
 # `transparent-clipping`.
-corner-radius = 0
+# 设置圆角处理
+corner-radius = 7;
 
 # Exclude conditions for rounded corners.
 rounded-corners-exclude = [
   "window_type = 'dock'",
-  "window_type = 'desktop'"
+  "window_type = 'desktop'",
+  "class_g = 'Rofi'"
 ];
 
 
 #################################
 #     Background-Blurring       #
 #################################
+
+
+blur:
+{
+
+  method = "dual_kawase";
+  strength=5
+
+  size = 12;
+
+  deviation = 5;
+};
+
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
@@ -213,8 +230,8 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, `egl` or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-# backend = "glx"
-backend = "xrender";
+backend = "glx"
+#backend = "xrender";
 
 # Use higher precision during rendering, and apply dither when presenting the
 # rendered screen. Reduces banding artifacts, but might cause performance
