调整i3为vim快捷键，添加scratchpad；调整polybar的workspace为i3

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -52,7 +52,7 @@ separator-foreground = ${colors.disabled}
 
 font-0 = monospace;2
 
-modules-left = xworkspaces xwindow
+modules-left = i3
 modules-right = pulseaudio backlight xkeyboard memory cpu wlan date systray
 
 cursor-click = pointer
