--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -135,7 +135,8 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
-  "77:class_g='Alacritty'"
+  "77:class_g='Alacritty'",
+  "88:class_g='Code'"
 ];
 
 
