添加fonts设置，修改backlight配置

--- a/polybar/modules/backlight.ini
+++ b/polybar/modules/backlight.ini
@@ -39,3 +39,32 @@ enable-scroll = true
 ; New in version 3.7.0
 ; Default: 5
 scroll-interval = 10
+
+; Available tags:
+;   <label> (default)
+;   <ramp>
+;   <bar>
+format =LIG <label>
+
+; Available tokens:
+;   %percentage% (default)
+label = %percentage%%
+
+; Only applies if <ramp> is used
+; ramp-0 = 🌕
+; ramp-1 = 🌔
+; ramp-2 = 🌓
+; ramp-3 = 🌒
+; ramp-4 = 🌑
+
+ramp-0 = 󰃜
+ramp-1 = 󰃝
+ramp-2 = 󰃞
+ramp-3 = 󰃟
+ramp-4 = 󰃠
+
+; Only applies if <bar> is used
+bar-width = 10
+bar-indicator = |
+bar-fill = ─
+bar-empty = ─format = <ramp> <label>
