--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -53,7 +53,7 @@ separator-foreground = ${colors.disabled}
 font-0 = monospace;2
 
 modules-left = i3
-modules-right = pulseaudio backlight xkeyboard memory cpu wlan date systray
+modules-right = pulseaudio backlight xkeyboard memory cpu eth date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
