--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -16,6 +16,8 @@
 ;
 ;==========================================================
 
+include-directory=./modules
+
 [colors]
 background = #282A2E
 background-alt = #373B41
@@ -25,7 +27,6 @@ secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
-include-directory=./modules
 
 [bar/example]
 width = 100%
@@ -50,10 +51,16 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+; font-0 = monospace;2
+
+; font-0 = "Noto Sans:size=9;3"
+font-0 = "Noto Sans;2"
+font-1 = "Iosevka Nerd Font:size=12;3"
+font-2 = "Iosevka Nerd Font:size=16;4"
 
 modules-left = i3
-modules-right = pulseaudio backlight xkeyboard memory cpu eth date systray
+; modules-right = pulseaudio backlight xkeyboard memory cpu eth date systray
+modules-right = battery pulseaudio backlight xkeyboard memory cpu wlan date systray
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -106,17 +113,70 @@ label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.disabled}
 
+
 [module/pulseaudio]
 type = internal/pulseaudio
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+; sink = alsa_output.pci-0000_12_00.3.analog-stereo
 
-label-volume = %percentage%%
+; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
+; Default: true
+use-ui-max = true
 
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
+; Interval for volume increase/decrease (in percent points)
+; Default: 5
+interval = 5
+
+; Reverses the increment/decrement on scroll event. Set this to true if you are
+; using natural scrolling option on your touchpad.
+; New in version 3.7.0
+; Default: false
+reverse-scroll = false
+
+; Available tags:
+;   <label-volume> (default)
+;   <ramp-volume>
+;   <bar-volume>
+format-volume = <ramp-volume> <label-volume>
+
+; Available tags:
+;   <label-muted> (default)
+;   <ramp-volume>
+;   <bar-volume>
+;format-muted = <label-muted>
+
+; Available tokens:
+;   %percentage% (default)
+;   %decibels%
+;label-volume = %percentage%%
+
+; Available tokens:
+;   %percentage% (default)
+;   %decibels%
+; label-muted = 🔇 muted
+; label-muted-foreground = #666
+
+; ; Only applies if <ramp-volume> is used
+; ramp-volume-0 = 🔈
+; ramp-volume-1 = 🔉
+; ramp-volume-2 = 🔊
+
+; ; Right and Middle click
+; click-right = pavucontrol
+; ; click-middle = 
+
+label-muted = ﱝ
+label-muted-foreground = ${color.fg-alt}
+
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+
+
+
 
 [module/xkeyboard]
 type = internal/xkeyboard
