--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -44,4 +44,7 @@
     },
     // "editor.fontFamily": "'Droid Sans Mono', 'monospace', monospace, 'Noto Sans','Iosevka Nerd Font'",
     "editor.fontFamily": "'JetBrainsMono NF', 'Droid Sans Mono', 'monospace', monospace, 'Noto Sans','Iosevka Nerd Font'",
+    "[dockerfile]": {
+        "editor.defaultFormatter": "ms-azuretools.vscode-docker"
+    },
 }
