--- a/polybar/modules/backlight.ini
+++ b/polybar/modules/backlight.ini
@@ -4,7 +4,7 @@ type = internal/backlight
 ; Use the following command to list available cards:
 ; $ ls -1 /sys/class/backlight/
 ; Default: first usable card in /sys/class/backlight (new in version 3.7.0)
-card = intel_backlight
+card = 
 
 ; Use the `/sys/class/backlight/.../actual-brightness` file
 ; rather than the regular `brightness` file.
