调整微信和Rustdesk为平铺

--- a/i3/config
+++ b/i3/config
@@ -235,5 +235,7 @@ bindsym $mod+Shift+a focus parent,kill
 
 # set default floating mod applications
 for_window [class="QQ"] floating enable
-for_window [class="wechat"] floating enable
+# for_window [class="wechat"] floating enable
+for_window [title="微信"] floating enable
 for_window [class="obs"] floating enable
+for_window [class="Rustdesk"] floating enable
