--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -1,6 +1,23 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "urn:fontconfig:fonts.dtd">
 <fontconfig>
-<!-- settings go here -->
+    <!-- settings go here -->
+    <alias>
+        <family>sans-serif</family>
+        <prefer>
 
+        </prefer>
+    </alias>
+    <alias>
+        <family>monospace</family>
+        <prefer>
+            <family>JetBrains Mono</family>
+            <family>Source Han Mono SC</family>
+        </prefer>
+    </alias>
+    <alias>
+        <family>serif</family>
+        <prefer>
+        </prefer>
+    </alias>
 </fontconfig>
