--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -5,7 +5,7 @@
     <alias>
         <family>sans-serif</family>
         <prefer>
-
+            <family>Source Han Sans CN</family>
         </prefer>
     </alias>
     <alias>
@@ -18,6 +18,7 @@
     <alias>
         <family>serif</family>
         <prefer>
+            <family>Source Han Serif CN</family>
         </prefer>
     </alias>
 </fontconfig>
